<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".CurrencyActivity">

    <TextView
        android:id="@+id/currencyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyTable" />

    <TextView
        android:id="@+id/currencyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyName" />

    <TextView
        android:id="@+id/currencyMidBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_mid_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyName" />

    <TextView
        android:id="@+id/currencyTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/effective_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencyAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_ask_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyMidBid" />
</androidx.constraintlayout.widget.ConstraintLayout>